--- a/exemple1.html
+++ b/exemple1.html
@@ -28,6 +28,10 @@
         <p v-if='seen'> Maintenant vous me voyez</p>    
     </div>
 
+    <div id="app">
+        <h2>{{ product }} are in stock.</h2>
+    </div>
+
     <script src="https://unpkg.com/vue"></script>
     <script src="js/main.js"></script>
 </body>
