--- a/exemple1.html
+++ b/exemple1.html
@@ -35,7 +35,7 @@
     <div id="app-5">
         <ul>
             <li v-for='product in products'>
-               quantity: {{ product }} </br>name : {{ product.name }}
+               quantity: {{ product.quantity }} </br>name : {{ product.name }}
             </li>
         </ul>
 
